Fixed x overflow bug on mobile by setting min-width to 300px; Added topic to front page

--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,8 @@ body {
   background-color: rgb(14, 14, 20);
   display: flex;
   flex-direction: column;
-  min-width:420px;        /* Suppose you want minimum width of 1000px */
-  width:420px; 
+  min-width:300px;        /* Suppose you want minimum width of 1000px */
+  width:300px; 
   width: auto !important;  /* Firefox will set width as auto */
   min-height: 100%;
   margin: 0;
@@ -66,11 +66,18 @@ font-size: 44%;
 
 .intro {
   margin-top: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   text-align: center;
   color: #d9d9d9;
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-  font-size: 500%;
+  font-size: 700%;
+}
+.topic {
+  padding: 30px;
+  text-align: center;
+  color: #d9d9d9;
+  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  font-size: 400%;
 }
 .center {
   text-align: center;
@@ -284,7 +291,72 @@ initial-value: 0deg;
 inherits: false;
 }
 
-@media only screen and (max-width: 730px) {  /* Following code based on: https://www.shecodes.io/athena/74977-how-to-change-font-size-with-media and https://blisk.io/devices/details/iphone-11-pro-max#css-media-query*/
+
+@media only screen and (max-width: 400px) {  /* Following code based on: https://www.shecodes.io/athena/74977-how-to-change-font-size-with-media and https://blisk.io/devices/details/iphone-11-pro-max#css-media-query*/
+  .rgb_border {
+    font-size: 100%;
+    border-radius: 50px;
+    padding: 16%;
+
+  }
+  .vertically_scalable_chatroom_project {
+    font-size: 100%;
+    border-radius: 50px;
+    padding: 16%;
+
+  }
+  .associate_aws_cert {
+    font-size: 100%;
+    border-radius: 50px;
+    padding: 16%;
+
+  }
+  .foundational_aws_cert {
+    font-size: 100%;
+    border-radius: 50px;
+    padding: 16%;
+
+  }
+  .webapp {
+    font-size: 100%;
+    border-radius: 50px;
+    padding: 16%;
+
+  }
+  .audvymeproject {
+    font-size: 100%;
+    border-radius: 50px;
+    padding: 16%;
+  }
+
+
+  .intro{
+    font-size: 200%;
+  }
+  footer
+  {
+    margin-top: auto;
+  }
+  .items {
+    flex-direction: column;
+    margin-top: auto;
+    gap: 50px;
+  }
+  img {
+    width: 150px;
+  }
+  .architecture {
+    width: 500px;
+  }
+  .vertically_scalable_architecture {
+    width: 500px;
+    height: 300px;
+  }
+  
+  
+
+}
+@media only screen and (max-width: 730px) and (min-width: 401px) {  /* Following code based on: https://www.shecodes.io/athena/74977-how-to-change-font-size-with-media and https://blisk.io/devices/details/iphone-11-pro-max#css-media-query*/
   .rgb_border {
     font-size: 150%;
     border-radius: 50px;
@@ -324,6 +396,7 @@ inherits: false;
 
   .intro{
     font-size: 200%;
+    padding: 5px;
   }
   footer
   {
